2011-04-24  Rik Cabanier  <cabanier@adobe.com>

Reviewed by Simon Fraser.

        Tables are not rendered correctly
        https://bugs.webkit.org/show_bug.cgi?id=59138

        * fast/table/auto-100-percent-width.html: Added.
        * platform/mac/fast/table/auto-100-percent-width-expected.txt: Added.
2011-04-24  Rik Cabanier  <cabanier@adobe.com>

        Reviewed by Simon Fraser.

        Tables are not rendered correctly
        https://bugs.webkit.org/show_bug.cgi?id=59138

        Test: fast/table/auto-100-percent-width.html

        * rendering/AutoTableLayout.cpp:
        (WebCore::AutoTableLayout::computePreferredLogicalWidths):

Canonical link: https://commits.webkit.org/74484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84755 268f45cc-cd09-0410-ab3c-d52691b4dbfc